<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/wordListFragment">
    
    <fragment
        android:id="@+id/wordListFragment"
        android:name="com.example.germanflashcards.ui.main.WordListFragment">
        <action
            android:id="@+id/action_to_addWord"
            app:destination="@id/addWordActivity" />
    </fragment>
        
    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.example.germanflashcards.ui.category.CategoryFragment">
        <action
            android:id="@+id/action_categoryFragment_to_categoryWordsFragment"
            app:destination="@id/categoryWordsFragment" />
    </fragment>

    <fragment
        android:id="@+id/categoryWordsFragment"
        android:name="com.example.germanflashcards.ui.category.CategoryWordsFragment">
        <argument
            android:name="categoryName"
            app:argType="string" />
    </fragment>
        
    <fragment
        android:id="@+id/statsFragment"
        android:name="com.example.germanflashcards.ui.stats.StatsFragment" />
        
    <fragment
        android:id="@+id/learnedWordsFragment"
        android:name="com.example.germanflashcards.ui.stats.LearnedWordsFragment"
        android:label="@string/learned_words" />
        
    <fragment
        android:id="@+id/testFragment"
        android:name="com.example.germanflashcards.ui.test.TestFragment"
        android:label="@string/test" />
        
    <fragment
        android:id="@+id/testSessionFragment"
        android:name="com.example.germanflashcards.ui.test.TestSessionFragment"
        android:label="@string/test_started" />
        
    <activity
        android:id="@+id/addWordActivity"
        android:name="com.example.germanflashcards.ui.add.AddWordActivity" />
        
</navigation>